gitops/proxmox/proxmox-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxmox
spec:
  type: ClusterIP
  ports:
    - name: https
      protocol: TCP
      port: 8006
      targetPort: 8006
